Refactor workflow parsing
1. Removed global preferences for workflow definition
2. Updated README